Fix Vercel console 404 routing

--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,12 @@
     "trailingSlash": false,
     "rewrites": [
         {
+            "source": "/assets/(.*)",
+            "destination": "/dist/assets/$1"
+        },
+        {
             "source": "/(.*)",
-            "destination": "/index.html"
+            "destination": "/dist/index.html"
         }
     ]
 }
